@@ -50,7 +50,7 @@ override_dh_install:
 	mv debian/tmp/lib/$(DEB_HOST_MULTIARCH)/*.so debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
 	mv debian/tmp/lib/$(DEB_HOST_MULTIARCH)/*.a debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
 
-	dh_install --fail-missing
+	dh_install
 
 	# Adding initramfs-tools integration
 	install -D -m 0755 debian/local/plymouth.hook debian/plymouth/usr/share/initramfs-tools/hooks/plymouth
@@ -92,3 +92,6 @@ override_dh_makeshlibs:
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='plymouth-dbg (<< 0.9.2-4~)'
+
+override_dh_missing:
+	dh_missing --fail-missing
