@@ -11,8 +11,9 @@ plymouth (0.9.4-1) UNRELEASED; urgency=medium
     - debian/libplymouth4.symbols: Add newly exported symbols
   * debian/control: Bump Standards-Version to 4.2.1 (no further changes)
   * Do not explicitly set the compression algorithm, to please lintian
+  * debian/rules: Use dh_missing --fail-missing instead of dh_install
 
- -- Laurent Bigonville <bigon@debian.org>  Wed, 07 Nov 2018 18:30:44 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 07 Nov 2018 18:35:35 +0100
 
 plymouth (0.9.3-3) unstable; urgency=medium
 
